--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Carlos Cervejas Especiais{% endblock %}</title>
-    <link rel="icon" href="{% static 'images/icon.png' %}">
+    <link href="{% static 'images/icon.png' %}" rel="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
 {% block content %}
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Principal</a>
+                        <a class="nav-link active" href="{% url 'home' %}" aria-current="page">Principal</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Produtos</a>
@@ -48,24 +48,21 @@
             {% endfor %}
             em toda a região de Garopaba e Imbituba - Santa Catarina.</p>
         <p>Oferecemos as melhores opções de cervejas artesanais do mercado com ótimo preço e qualidade.</p>
-        <button type="button" class="btn btn-secondary">
-            <a href="" style="text-decoration: none; color: white">Conheça a nossa linha de cervejas especiais!</a>
+        <button class="btn btn-secondary" type="button">
+            <a class="text-button" href="">Conheça a nossa linha de cervejas especiais!</a>
         </button>
     </div>
 
     <div class="row">
-    {% for marca in marcas %}
-        <div class="col-md-4">
-            <img class="images" src="{{ marca.imagem.url }}" alt="{{ marca.nome }}">
-            <h6>{{ marca.nome }}</h6>
-            <h6>{{ marca.descricao }}</h6>
-        </div>
-    {% endfor %}
-{% endblock %}
-
-{% block footer %}
-    <hr>
-    <p>&copy; Carlos Cervejas Especiais 2023</p>
+        {% for marca in marcas %}
+            <div class="col-md-4">
+                <img class="images" src="{{ marca.imagem.url }}" alt="{{ marca.nome }}">
+                <h6>{{ marca.nome }}</h6>
+                <h6>{{ marca.descricao }}</h6>
+            </div>
+        {% endfor %}
+        <hr>
+        <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
 {% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
