--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -4,42 +4,52 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Carlos Cervejas Especiais{% endblock %}</title>
+    <title>{% block title %}Principal - Carlos Cervejas Especiais{% endblock %}</title>
     <link href="{% static 'images/icon.png' %}" rel="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css">
+    {% block styles %}
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css">
+    {% endblock %}
 </head>
 <body>
-{% block content %}
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img class="logo" src="{% static 'images/logo.png' %}" alt="Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img class="logo" src="{% static 'images/logo.png' %}" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    {% block home %}
                         <a class="nav-link active" href="{% url 'home' %}" aria-current="page">Principal</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Produtos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Contato</a>
-                    </li>
-                </ul>
-            </div>
+                    {% endblock %}
+                </li>
+                <li class="nav-item">
+                    {% block produtos %}
+                        <a class="nav-link inactive" href="">Produtos</a>
+                    {% endblock %}
+                </li>
+                <li class="nav-item">
+                    {% block sobre %}
+                        <a class="nav-link inactive" href="{% url 'sobre' %}">Sobre</a>
+                    {% endblock %}
+                </li>
+                <li class="nav-item">
+                    {% block contato %}
+                        <a class="nav-link inactive" href="">Contato</a>
+                    {% endblock %}
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
+{% block content %}
     <div class="container">
         <p>A Carlos Cervejas Especiais é distribuidora exclusiva das cervejas
             {% for marca in marcas %}
@@ -53,7 +63,7 @@
         </button>
     </div>
 
-    <div class="row">
+    <div class="container row">
         {% for marca in marcas %}
             <div class="col-md-4">
                 <img class="images" src="{{ marca.imagem.url }}" alt="{{ marca.nome }}">
