--- a/app/static/css/styles_sobre.css
+++ b/app/static/css/styles_sobre.css
@@ -17,6 +17,12 @@
     padding: 40px 40px 260px;
 }
 
+@media (max-width: 600px) {
+    .container {
+        padding-bottom: 160px;
+    }
+}
+
 .inactive {
     opacity: 90%;
 }
@@ -40,7 +46,7 @@
 }
 
 .navbar-toggler {
-    margin-bottom: 20px;
+    margin: auto 0 auto auto;
 }
 
 .row.container {
