--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -40,8 +40,8 @@
                     {% endblock %}
                 </li>
                 <li class="nav-item">
-                    {% block contato %}
-                        <a class="nav-link inactive" href="">Contato</a>
+                    {% block pedido %}
+                        <a class="nav-link inactive" href="">Pedido</a>
                     {% endblock %}
                 </li>
             </ul>
@@ -68,13 +68,19 @@
             <div class="col-md-4">
                 <img class="images" src="{{ marca.imagem.url }}" alt="{{ marca.nome }}">
                 <h6>{{ marca.nome }}</h6>
-                <h6>{{ marca.descricao }}</h6>
+                <h6>&#8226 {{ marca.descricao }}</h6>
             </div>
         {% endfor %}
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
 {% endblock %}
+
+<div class="whatsapp">
+    <a href="https://api.whatsapp.com/send?phone=5548991298261" target="_blank">
+        <img src="{% static 'images/whatsapp.png' %}" alt="WhatsApp">
+    </a>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
