refactor: Refatorando o conteúdo e o estilo da página de sobre.

--- a/app/templates/main/sobre.html
+++ b/app/templates/main/sobre.html
@@ -25,11 +25,15 @@
             <h6>&#8226 Nossa Visão: Ser o maior distribuidor do país e servir de referência para as demais regiões do
                 Brasil.</h6>
         </div>
-        <p>Para dúvidas e pedidos, favor contatar através dos canais abaixo:</p>
-        <h6>E-mail:</h6>
-        <p>calinholeite@yahoo.com.br</p>
-        <h6>Telefone:</h6>
-        <p>(48) 99129-8261</p>
+        <p>Para atendimento, favor contatar através dos canais abaixo:</p>
+        <h6>&#8226 E-mail:</h6>
+        <p>
+            <a href="mailto:calinholeite@yahoo.com.br">calinholeite@yahoo.com.br</a>
+        </p>
+        <h6>&#8226 Telefone:</h6>
+        <p>
+            <a href="https://api.whatsapp.com/send?phone=5548991298261" target="_blank">(48) 99129-8261</a>
+        </p>
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2022</p>
     </div>
