--- a/app/static/css/styles_sobre.css
+++ b/app/static/css/styles_sobre.css
@@ -1,6 +1,7 @@
 :root {
     --border-thickness: 0.03em;
     --dark-gray: #808080;
+    --light-orange: #FFA74F;
     --pale-orange: #FFEBB5;
     --very-light-gray: #F6F6F6;
     --very-light-orange: #FFD6AD;
@@ -53,6 +54,17 @@
     padding: 40px 40px 0 40px;
 }
 
+.whatsapp {
+    bottom: 20px;
+    position: fixed;
+    right: 20px;
+}
+
+.whatsapp img {
+    height: 90px;
+    width: 90px;
+}
+
 body {
     background-image: linear-gradient(to right, var(--very-light-orange), white);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -68,7 +80,12 @@ h6:first-child {
 }
 
 p {
-    font-size: 16px;
+    font-size: 15px;
+}
+
+p a {
+    color: var(--light-orange);
+    text-decoration: none;
 }
 
 p:last-child {
