--- a/app/templates/main/produtos.html
+++ b/app/templates/main/produtos.html
@@ -26,7 +26,7 @@
 
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h6 class="card-title">{{ produto.nome }} - {{ produto.quantidade }}ml</h6>
+                                    <h6 class="card-title">{{ produto.nome }} - {{ produto.conteudo }}ml</h6>
                                     <p class="card-text">&#8226; {{ produto.descricao }}</p>
                                     <p class="card-text">IBU {{ produto.ibu }} - ABV {{ produto.abv }}%</p>
                                     <h6 class="card-title">R$ {{ produto.valor }}</h6>
@@ -40,6 +40,7 @@
     </div>
 
     <div class="container row">
+        <p>&#8226; Para solicitações, favor prosseguir através da página de <a href="">pedidos</a>.</p>
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
