style: Alterando o estilo dos campos de e-mail e telefone na página de sobre.

--- a/app/static/css/styles_sobre.css
+++ b/app/static/css/styles_sobre.css
@@ -79,6 +79,16 @@ h6:first-child {
     margin-bottom: 30px;
 }
 
+h6:nth-child(5) {
+    color: inherit;
+    font-weight: normal;
+}
+
+h6:nth-child(7) {
+    color: inherit;
+    font-weight: normal;
+}
+
 p {
     font-size: 14px;
 }
