feat: Criando a parte inicial da página de pedidos.

--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -41,7 +41,7 @@
                 </li>
                 <li class="nav-item">
                     {% block pedidos %}
-                        <a class="nav-link inactive" href="">Pedidos</a>
+                        <a class="nav-link inactive" href="{% url 'pedidos' %}">Pedidos</a>
                     {% endblock %}
                 </li>
             </ul>
