--- a/app/templates/main/produtos.html
+++ b/app/templates/main/produtos.html
@@ -40,7 +40,9 @@
     </div>
 
     <div class="container row">
-        <p>&#8226; Para solicitações, favor prosseguir através da página de <a href="">pedidos</a>.</p>
+        <p>&#8226; Para solicitações, favor prosseguir através da página de 
+            <a href="{% url 'pedidos' %}">pedidos</a>.
+        </p>
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
