--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -12,7 +12,116 @@
 {% endblock %}
 {% block content %}
     <div class="container row">
+        <form method="post" class="needs-validation" novalidate>
+            {% csrf_token %}
+            <div class="d-flex justify-content-center">
+                <h6>Preencha os dados:</h6>
+            </div>
+            <div class="row my-3 mx-1 justify-content-center">
+                <div class="form-group col-md-4">
+                    <label for="nome">Nome</label>
+                    <input class="form-control" type="text" name="nome" id="nome" required>
+                </div>
+                <div class="form-group col-md-5">
+                    <label for="email">E-mail</label>
+                    <input class="form-control" type="email" name="email" id="email" required>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="telefone">Telefone</label>
+                    <input class="form-control" type="text" name="telefone" id="telefone" required>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="endereco">Endereço</label>
+                    <input class="form-control" type="text" name="endereco" id="endereco" required>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="cidade">Cidade</label>
+                    <input class="form-control" type="text" name="cidade" id="cidade" required>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="estado">Estado</label>
+                    <input class="form-control" type="text" name="estado" id="estado" required>
+                </div>
+            </div>
+            <br/>
+            <div class="d-flex justify-content-center">
+                <h6>Selecione a quantidade de produtos:</h6>
+            </div>
+            <div class="row my-3 mx-1 justify-content-center">
+                <table class="table table-striped table-borderless" aria-describedby="table">
+                    <thead class="text-white">
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Descrição</th>
+                        <th scope="col">Valor Unit.</th>
+                        <th scope="col">Qtde.</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for produto in produtos %}
+                        <tr>
+                            <th class="align-middle" scope="row">
+                                <div class="card-img-container images">
+                                    <img class="img-fluid rounded-start" src="{{ produto.imagem.url }}"
+                                         alt="{{ produto.nome }}">
+                                </div>
+                            </th>
+                            <td class="align-middle">
+                                <label>
+                                    <input name="p{{ forloop.counter }}_nome" value="{{ produto.nome }}" hidden>
+                                </label>{{ produto.nome }}
+                            </td>
+                            <td class="align-middle">
+                                <label>
+                                    <input name="p{{ forloop.counter }}_valor" value="{{ produto.valor }}" hidden>
+                                </label>R$ {{ produto.valor }}
+                            </td>
+                            <td class="align-middle">
+                                <label for="p{{ forloop.counter }}_qtde"></label>
+                                <input name="p{{ forloop.counter }}_qtde" id="p{{ forloop.counter }}_qtde"
+                                       class="col-md-5 text-center input-qtde" type="number" min="0" max="99" value="0"
+                                       oninput="this.value = Math.abs(this.value)" required>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-secondary btn-lg">Avançar</button>
+            </div>
+        </form>
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
+    <script>
+        (function () {
+            "use strict"
+
+            let forms = document.querySelectorAll('.needs-validation')
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
+
+                        let qtdeInputs = document.getElementsByClassName("input-qtde")
+                        let soma = 0
+                        for (let i = 0; i < qtdeInputs.length; i++) {
+                            soma += Number(qtdeInputs[i].value)
+                        }
+
+                        if (soma === 0) {
+                            alert("A quantidade de pelo menos um produto precisa ser maior que zero!")
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
+
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
+    </script>
 {% endblock %}
