--- a/app/static/css/styles_envio.css
+++ b/app/static/css/styles_envio.css
@@ -11,11 +11,15 @@
 }
 
 .align-middle:nth-child(3) {
-    width: 30%;
+    width: 20%;
 }
 
 .align-middle:nth-child(4) {
-    width: 20%;
+    width: 15%;
+}
+
+.align-middle:nth-child(5) {
+    width: 15%;
 }
 
 .container {
@@ -33,8 +37,8 @@
     padding: 40px 40px 0 40px;
 }
 
-.form-group {
-    margin-bottom: 20px;
+.divider {
+    margin-bottom: 28px;
 }
 
 .images {
@@ -67,6 +71,11 @@
     margin: auto 0 auto auto;
 }
 
+.text-muted span {
+    color: var(--dark-gray);
+    font-weight: bold;
+}
+
 .whatsapp {
     bottom: 20px;
     position: fixed;
@@ -93,9 +102,21 @@ h6 {
     text-align: center;
 }
 
+p:first-child {
+    margin-top: 20px;
+}
+
 p:last-child {
     color: var(--dark-gray);
     font-size: 12px;
+}
+
+p span:first-child {
+    font-size: 14px;
+}
+
+p span:last-child {
+    font-size: 24px;
 }
 
 thead {
