--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -51,10 +51,10 @@
                 <table class="table table-striped table-borderless" aria-describedby="table">
                     <thead class="text-white">
                     <tr>
-                        <th scope="col"></th>
+                        <th class="rounded-top-left" scope="col"></th>
                         <th scope="col">Descrição</th>
                         <th scope="col">Valor Unit.</th>
-                        <th scope="col">Qtde.</th>
+                        <th class="rounded-top-right" scope="col">Qtde.</th>
                     </tr>
                     </thead>
                     <tbody>
