--- a/app/static/css/styles_pedidos.css
+++ b/app/static/css/styles_pedidos.css
@@ -67,6 +67,14 @@
     margin: auto 0 auto auto;
 }
 
+.rounded-top-left {
+    border-top-left-radius: 5px;
+}
+
+.rounded-top-right {
+    border-top-right-radius: 5px;
+}
+
 .whatsapp {
     bottom: 20px;
     position: fixed;
