--- a/app/templates/main/envio.html
+++ b/app/templates/main/envio.html
@@ -49,11 +49,11 @@
             <table class="table table-striped table-borderless" aria-describedby="table">
                 <thead class="text-white">
                 <tr>
-                    <th scope="col"></th>
+                    <th class="rounded-top-left" scope="col"></th>
                     <th scope="col">Descrição</th>
                     <th scope="col">Valor Unit.</th>
                     <th scope="col">Qtde.</th>
-                    <th scope="col">Valor Total</th>
+                    <th class="rounded-top-right" scope="col">Valor Total</th>
                 </tr>
                 </thead>
                 <tbody>
