--- a/app/templates/main/confirmacao.html
+++ b/app/templates/main/confirmacao.html
@@ -1,8 +1,8 @@
 {% extends "main/base.html" %}
 {% load static %}
-<title>{% block title %}Envio - Carlos Cervejas Especiais{% endblock %}</title>
+<title>{% block title %}Confirmação - Carlos Cervejas Especiais{% endblock %}</title>
 {% block styles %}
-    <link href="{% static 'css/styles_envio.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/styles_confirmacao.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 {% block home %}
     <a class="nav-link inactive" href="{% url 'home' %}">Principal</a>
