--- a/app/static/css/styles_envio.css
+++ b/app/static/css/styles_envio.css
@@ -1,6 +1,6 @@
 :root {
     --border-thickness: 0.03em;
-    --dark-gray: #808080;
+    --dark-gray: #6C757D;
     --pale-orange: #FFEBB5;
     --very-light-gray: #F6F6F6;
     --very-light-orange: #FFD6AD;
@@ -93,10 +93,6 @@
 body {
     background-image: linear-gradient(to right, var(--very-light-orange), white);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-button {
-    margin-bottom: 30px;
 }
 
 h6 {
