--- a/app/static/css/styles_pedidos.css
+++ b/app/static/css/styles_pedidos.css
@@ -1,6 +1,6 @@
 :root {
     --border-thickness: 0.03em;
-    --dark-gray: #808080;
+    --dark-gray: #6C757D;
     --pale-orange: #FFEBB5;
     --very-light-gray: #F6F6F6;
     --very-light-orange: #FFD6AD;
