--- a/app/templates/main/confirmacao.html
+++ b/app/templates/main/confirmacao.html
@@ -97,7 +97,15 @@
                 <button type="submit" class="btn btn-secondary btn-lg">Enviar</button>
             </form>
         </div>
+        <div class="d-flex justify-content-start">
+            <button onclick="voltar()" class="btn btn-secondary btn-md">Voltar</button>
+        </div>
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
+    <script type="text/javascript">
+        function voltar() {
+            window.history.back()
+        }
+    </script>
 {% endblock %}
