feat: Implementando a geração de pdf da página do pedido enviado. Adicionando o botão para redirecionamento à página principal.

--- a/app/static/css/styles_envio.css
+++ b/app/static/css/styles_envio.css
@@ -95,6 +95,14 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+button {
+    margin-bottom: 30px;
+}
+
+button:last-child {
+    margin-bottom: 25px;
+}
+
 h6 {
     color: var(--dark-gray);
     font-size: 20px;
