--- a/app/templates/main/envio.html
+++ b/app/templates/main/envio.html
@@ -15,48 +15,92 @@
         <div class="d-flex justify-content-center">
             <h6>Pedido enviado com sucesso!</h6>
         </div>
-        <div class="row d-flex align-items-baseline">
-            <p>Pedido: <strong>{{ pedido }}</strong></p>
-            <hr class="divider">
-        </div>
-        <div class="row my-3 mx-1 justify-content-center">
-            <table class="table table-striped table-borderless" aria-describedby="table">
-                <thead class="text-white">
-                <tr>
-                    <th class="rounded-top-left" scope="col"></th>
-                    <th scope="col">Descrição</th>
-                    <th scope="col">Valor Unit.</th>
-                    <th scope="col">Qtde.</th>
-                    <th class="rounded-top-right" scope="col">Valor Total</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for produto in produtos %}
+        <div id="pdf">
+            <div class="row d-flex align-items-baseline">
+                <p>Pedido: <strong>{{ pedido }}</strong></p>
+                <hr class="divider">
+            </div>
+            <div class="row my-3 mx-1 justify-content-center">
+                <table class="table table-striped table-borderless" aria-describedby="table">
+                    <thead class="text-white">
                     <tr>
-                        <th class="align-middle" scope="row">
-                            <div class="card-img-container images">
-                                <img class="img-fluid rounded-start" src="{{ produto.imagem.url }}"
-                                     alt="{{ produto.nome }}">
-                            </div>
-                        </th>
-                        <td class="align-middle">{{ produto.nome }}</td>
-                        <td class="align-middle">R$ {{ produto.valor }}</td>
-                        <td class="align-middle">{{ produto.qtde }}</td>
-                        <td class="align-middle">R$ {{ produto.total }}</td>
+                        <th class="rounded-top-left" scope="col"></th>
+                        <th scope="col">Descrição</th>
+                        <th scope="col">Valor Unit.</th>
+                        <th scope="col">Qtde.</th>
+                        <th class="rounded-top-right" scope="col">Valor Total</th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <div class="row">
-                <div class="col-xl-11">
-                    <p class="text-black float-end">
-                        <span class="text-black me-3">Valor Total do Pedido: </span>
-                        <span>R$ {{ total_pedido }}</span>
-                    </p>
+                    </thead>
+                    <tbody>
+                    {% for produto in produtos %}
+                        <tr>
+                            <th class="align-middle" scope="row">
+                                <div class="card-img-container images">
+                                    <img class="img-fluid rounded-start" src="{{ produto.imagem.url }}"
+                                         alt="{{ produto.nome }}">
+                                </div>
+                            </th>
+                            <td class="align-middle">{{ produto.nome }}</td>
+                            <td class="align-middle">R$ {{ produto.valor }}</td>
+                            <td class="align-middle">{{ produto.qtde }}</td>
+                            <td class="align-middle">R$ {{ produto.total }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <div class="row">
+                    <div class="col-xl-11">
+                        <p class="text-black float-end">
+                            <span class="text-black me-3">Valor Total do Pedido: </span>
+                            <span>R$ {{ total_pedido }}</span>
+                        </p>
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button onclick="gerar('pdf')" class="btn btn-secondary btn-lg">Gerar PDF</button>
+        </div>
+        <div class="d-flex justify-content-start">
+            <button onclick="home()" class="btn btn-secondary btn-md">Sair</button>
         </div>
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
+    <script>
+        function gerar(id) {
+            let conteudo = document.getElementById(id).innerHTML;
+            let nome = 'Pedido - {{ pedido }}';
+            let iframe = document.createElement('iframe');
+            let bootstrap = '<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"' +
+                ' rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"' +
+                ' crossorigin="anonymous">';
+            let styles_envio = '<link href="{% static "css/styles_envio.css" %}" rel="stylesheet" type="text/css">';
+
+            iframe.style.display = 'none';
+            document.body.appendChild(iframe);
+
+            let doc = iframe.contentDocument || iframe.contentWindow.document;
+            let temp = '<!DOCTYPE html><html lang="pt-BR"><head><title>' + nome + '</title>' +
+                bootstrap + styles_envio + '</head><body>' + conteudo + '</body></html>';
+
+            doc.open();
+            doc.write(temp);
+            doc.close();
+
+            iframe.onload = function () {
+                let head = document.getElementsByTagName('head')[0];
+                let style = document.createElement('style');
+
+                style.innerHTML = bootstrap;
+                head.appendChild(style);
+                iframe.contentWindow.print();
+                document.body.removeChild(iframe);
+            };
+        }
+
+        function home() {
+            window.location.href = '{% url 'home' %}'
+        }
+    </script>
 {% endblock %}
