refactor: Refatorando os códigos de scripts.

--- a/app/templates/main/confirmacao.html
+++ b/app/templates/main/confirmacao.html
@@ -103,9 +103,9 @@
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
-    <script type="text/javascript">
+    <script>
         function voltar() {
-            window.history.back()
+            window.history.back();
         }
     </script>
 {% endblock %}
