fix: Corrigindo o clique do botão para redirecionamento à página de produtos.

--- a/app/templates/main/envio.html
+++ b/app/templates/main/envio.html
@@ -100,7 +100,7 @@
         }
 
         function home() {
-            window.location.href = '{% url 'home' %}'
+            window.location.href = '{% url 'home' %}';
         }
     </script>
 {% endblock %}
