--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -58,8 +58,8 @@
             {% endfor %}
             em toda a região de Garopaba e Imbituba - Santa Catarina.</p>
         <p>Oferecemos as melhores opções de cervejas artesanais do mercado com ótimo preço e qualidade.</p>
-        <button class="btn btn-secondary" type="button">
-            <a class="text-button" href="{% url 'produtos' %}">Conheça a nossa linha de cervejas especiais!</a>
+        <button onclick="produtos()" class="btn btn-secondary" type="button">
+            <a class="text-button">Conheça a nossa linha de cervejas especiais!</a>
         </button>
     </div>
 
@@ -84,5 +84,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+<script>
+    function produtos() {
+        window.location.href = '{% url 'produtos' %}';
+    }
+</script>
 </body>
 </html>
