refactor: Adicionando as funções de script em arquivos individuais por template.

--- a/app/templates/main/confirmacao.html
+++ b/app/templates/main/confirmacao.html
@@ -103,9 +103,5 @@
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
     </div>
-    <script>
-        function voltar() {
-            window.history.back();
-        }
-    </script>
+    <script src="{% static 'js/scripts_confirmacao.js' %}"></script>
 {% endblock %}
