--- a/app/templates/main/sobre.html
+++ b/app/templates/main/sobre.html
@@ -28,11 +28,11 @@
         <p>Para atendimento, favor contatar através dos canais abaixo:</p>
         <h6>&#8226 E-mail:</h6>
         <p>
-            <a href="mailto:calinholeite@yahoo.com.br">calinholeite@yahoo.com.br</a>
+            <a href="mailto:{{ email }}">{{ email }}</a>
         </p>
         <h6>&#8226 Telefone:</h6>
         <p>
-            <a href="https://api.whatsapp.com/send?phone=5548991298261" target="_blank">(48) 99129-8261</a>
+            <a href="https://api.whatsapp.com/send?phone={{ whatsapp }}" target="_blank">{{ telefone }}</a>
         </p>
         <hr>
         <p>&copy; Carlos Cervejas Especiais 2023</p>
