--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">
+        <a class="navbar-brand" href="{% url 'index' %}">
             <img class="logo" src="{% static 'images/logo.png' %}" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -25,8 +25,8 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    {% block home %}
-                        <a class="nav-link active" href="{% url 'home' %}" aria-current="page">Principal</a>
+                    {% block index %}
+                        <a class="nav-link active" href="{% url 'index' %}" aria-current="page">Principal</a>
                     {% endblock %}
                 </li>
                 <li class="nav-item">
