--- a/app/templates/main/produtos.html
+++ b/app/templates/main/produtos.html
@@ -4,8 +4,8 @@
 {% block styles %}
     <link href="{% static 'css/styles_produtos.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
-{% block home %}
-    <a class="nav-link inactive" href="{% url 'home' %}">Principal</a>
+{% block index %}
+    <a class="nav-link inactive" href="{% url 'index' %}">Principal</a>
 {% endblock %}
 {% block produtos %}
     <a class="nav-link active" href="{% url 'produtos' %}" aria-current="page">Produtos</a>
