--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -20,11 +20,11 @@
             <div class="row my-3 mx-1 justify-content-center">
                 <div class="form-group col-md-4">
                     <label for="nome">Nome</label>
-                    <input class="form-control" type="text" name="nome" id="nome" required>
+                    <input class="form-control" type="text" name="nome" id="nome" maxlength="50" required>
                 </div>
                 <div class="form-group col-md-5">
                     <label for="email">E-mail</label>
-                    <input class="form-control" type="email" name="email" id="email" required>
+                    <input class="form-control" type="email" name="email" id="email" maxlength="254" required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="telefone">Telefone</label>
@@ -32,15 +32,17 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="endereco">Endereço</label>
-                    <input class="form-control" type="text" name="endereco" id="endereco" required>
+                    <input class="form-control" type="text" name="endereco" id="endereco" maxlength="100" required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="cidade">Cidade</label>
-                    <input class="form-control" type="text" name="cidade" id="cidade" required>
+                    <input class="form-control" type="text" name="cidade" id="cidade" maxlength="50" required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="estado">Estado</label>
-                    <input class="form-control" type="text" name="estado" id="estado" required>
+                    <select class="form-control" name="estado" id="estado" required>
+                        <option value="">Selecione um Estado</option>
+                    </select>
                 </div>
             </div>
             <br/>
