--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -28,7 +28,8 @@
                 </div>
                 <div class="form-group col-md-3">
                     <label for="telefone">Telefone</label>
-                    <input class="form-control" type="text" name="telefone" id="telefone" required>
+                    <input class="form-control" type="text" name="telefone" id="telefone"
+                           oninput="formatarTelefone()" required>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="endereco">Endereço</label>
