--- a/app/templates/main/envio.html
+++ b/app/templates/main/envio.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-center">
-            <button onclick="gerar('pdf')" class="btn btn-secondary btn-lg">Gerar PDF</button>
+            <button onclick="gerar('pdf', '{{ pedido }}')" class="btn btn-secondary btn-lg">Gerar PDF</button>
         </div>
         <div class="d-flex justify-content-start">
             <button onclick="index()" class="btn btn-secondary btn-md">Sair</button>
