feat: Implementando em todas as páginas a renderização das informações de nome e versão da aplicação presentes no settings.py.

--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -67,7 +67,7 @@
             </div>
         {% endfor %}
         <hr>
-        <p>&copy; Carlos Cervejas Especiais 2023</p>
+        <p>&copy; {{ name }} 2023 - v{{ version }}</p>
     </div>
 {% endblock %}
 
