--- a/app/templates/main/confirmacao.html
+++ b/app/templates/main/confirmacao.html
@@ -101,7 +101,7 @@
             <button onclick="voltar()" class="btn btn-secondary btn-md">Voltar</button>
         </div>
         <hr>
-        <p>&copy; Carlos Cervejas Especiais 2023</p>
+        <p>&copy; {{ name }} 2023 - v{{ version }}</p>
     </div>
     <script src="{% static 'js/scripts_confirmacao.js' %}"></script>
 {% endblock %}
