--- a/app/templates/main/envio.html
+++ b/app/templates/main/envio.html
@@ -65,7 +65,7 @@
             <button onclick="index()" class="btn btn-secondary btn-md">Sair</button>
         </div>
         <hr>
-        <p>&copy; Carlos Cervejas Especiais 2023</p>
+        <p>&copy; {{ name }} 2023 - v{{ version }}</p>
     </div>
     <script src="{% static 'js/scripts_envio.js' %}"></script>
 {% endblock %}
