--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -99,7 +99,7 @@
             </div>
         </form>
         <hr>
-        <p>&copy; Carlos Cervejas Especiais 2023</p>
+        <p>&copy; {{ name }} 2023 - v{{ version }}</p>
     </div>
     <script src="{% static 'js/scripts_pedidos.js' %}"></script>
 {% endblock %}
