--- a/app/templates/main/produtos.html
+++ b/app/templates/main/produtos.html
@@ -40,10 +40,10 @@
     </div>
 
     <div class="container row">
-        <p>&#8226; Para solicitações, favor prosseguir através da página de 
+        <p>&#8226; Para solicitações, favor prosseguir através da página de
             <a href="{% url 'pedidos' %}">pedidos</a>.
         </p>
         <hr>
-        <p>&copy; Carlos Cervejas Especiais 2023</p>
+        <p>&copy; {{ name }} 2023 - v{{ version }}</p>
     </div>
 {% endblock %}
