--- a/app/templates/main/sobre.html
+++ b/app/templates/main/sobre.html
@@ -35,6 +35,6 @@
             <a href="https://api.whatsapp.com/send?phone={{ whatsapp }}" target="_blank">{{ telefone }}</a>
         </p>
         <hr>
-        <p>&copy; Carlos Cervejas Especiais 2023</p>
+        <p>&copy; {{ name }} 2023 - v{{ version }}</p>
     </div>
 {% endblock %}
