refactor: Ajustando a validação do tamanho máximo (maxlength) de alguns campos do formulário na página de pedidos.

--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -24,11 +24,11 @@
                 </div>
                 <div class="form-group col-md-5">
                     <label for="email">E-mail</label>
-                    <input class="form-control" type="email" name="email" id="email" maxlength="254" required>
+                    <input class="form-control" type="email" name="email" id="email" maxlength="100" required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="telefone">Telefone</label>
-                    <input class="form-control" type="text" name="telefone" id="telefone"
+                    <input class="form-control" type="text" name="telefone" id="telefone" maxlength="15"
                            oninput="formatarTelefone()" required>
                 </div>
                 <div class="form-group col-md-6">
