--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -20,11 +20,11 @@
             <div class="row my-3 mx-1 justify-content-center">
                 <div class="form-group col-md-4">
                     <label for="nome">Nome</label>
-                    <input class="form-control" type="text" name="nome" id="nome" maxlength="50" required>
+                    <input class="form-control" type="text" name="nome" id="nome" maxlength="50" minlength="2" required>
                 </div>
                 <div class="form-group col-md-5">
                     <label for="email">E-mail</label>
-                    <input class="form-control" type="email" name="email" id="email" maxlength="100" required>
+                    <input class="form-control" type="email" name="email" id="email" maxlength="100" minlength="5" required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="telefone">Telefone</label>
