--- a/app/templates/main/pedidos.html
+++ b/app/templates/main/pedidos.html
@@ -24,20 +24,23 @@
                 </div>
                 <div class="form-group col-md-5">
                     <label for="email">E-mail</label>
-                    <input class="form-control" type="email" name="email" id="email" maxlength="100" minlength="5" required>
+                    <input class="form-control" type="email" name="email" id="email" maxlength="100" minlength="5"
+                           required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="telefone">Telefone</label>
-                    <input class="form-control" type="text" name="telefone" id="telefone" maxlength="15"
+                    <input class="form-control" type="text" name="telefone" id="telefone" maxlength="15" minlength="14"
                            oninput="formatarTelefone()" required>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="endereco">Endereço</label>
-                    <input class="form-control" type="text" name="endereco" id="endereco" maxlength="100" required>
+                    <input class="form-control" type="text" name="endereco" id="endereco" maxlength="100" minlength="5"
+                           required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="cidade">Cidade</label>
-                    <input class="form-control" type="text" name="cidade" id="cidade" maxlength="50" required>
+                    <input class="form-control" type="text" name="cidade" id="cidade" maxlength="50" minlength="2"
+                           required>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="estado">Estado</label>
